...
    
    fileprivate func setupView() {
        let viewSize = CGRect(x: 0, y: 0, width: view.bounds.width, height: view.bounds.height)
        mainView = ItuneWebView.instancefromNib(viewSize)
        view.addSubview(mainView!)
        self.mainView?.viewDelegate = self
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Add Url", style: .plain, target: self, action: #selector(segueToAddUrl))
    }
}

extension ItuneWebController:ItuneWebDelegate,ItuneWebTableViewCellDelegate {
    
    struct ItuneAPIJson {
        let key = "results"
        let podcastTitle = "collectionName"
        let podcastImage = "artworkUrl60"
        let feedUrl = "feedUrl"
        
        init () {
        }
    }
...
