...
}

// reference to https://github.com/maranathApp/Music-Player-App-Final-Project/blob/master/PlayerViewController.swift
extension PlayerController: PlayerViewDelegate {
    func openDeleteModal() {
        self.alertController = UIAlertController(title: "Delete Episode", message: "Are you sure you want to delete this Episode?", preferredStyle: UIAlertControllerStyle.alert)
        let DestructiveAction = UIAlertAction(title: "Delete", style: UIAlertActionStyle.destructive) { (result : UIAlertAction) -> Void in
            Log.info("Deleted Episode")
            self.closeDeleteModal()
            self.navigationController?.popViewController(animated: true)
            self.deleteEpisode()
        }
        let cancelAction = UIAlertAction(title: "Cancel", style: UIAlertActionStyle.default) { (result : UIAlertAction) -> Void in
            Log.info("Did not Delete Episode")
            self.closeDeleteModal()
        }
        self.alertController?.addAction(DestructiveAction)
        self.alertController?.addAction(cancelAction)
        self.present(self.alertController!, animated: true, completion: nil)
...
