...
        didSet {
            if isPlaying {
                playButton.setImage(#imageLiteral(resourceName: "Pause"), for: .normal)
                viewDelegate?.playPodcast()
                statusLabel.text = "Playing at \(Int(AudioEpisodeTracker.currentRate))x"
            } else {
                playButton.setImage(#imageLiteral(resourceName: "Play"), for: .normal)
                viewDelegate?.pausePodcast()
                statusLabel.text = "Pause"
            }
        }
    }
    @IBAction func backButton(_ sender: AnyObject) {
...
