...
        guard  let episodeCell = self.mainView?.EpisodeTable.cellForRow(at: indexPathForEpisode) as? EpisodeViewTableViewCell  else {
            return
        }
        episodeCell.downloadAnimation.isHidden = false
        episodeCell.downloadAnimation.startAnimating()
        Log.info("Downloading has started")
        episodeCell.downloadStatus.text = "Downloading ..."
        ModelBridge.sharedInstance.downloadAudio((selectedEpisode.audioURL)!, result: { (downloadedPodcast) in
            
            guard downloadedPodcast != nil  else {
                DispatchQueue.main.async {
                    Log.info("DOWNLOAD ERRRRROOOOORRRRRRRRR")
                    episodeCell.downloadAnimation.isHidden = true
...
